--- a/apps/app_system/templates/login.html
+++ b/apps/app_system/templates/login.html
@@ -41,7 +41,7 @@
                                     <div class="text-center">
                                         
                                         {% if msg %}
-                                        <p class=" h4 mb-0  text-danger text-gradient font-weight-bold">{{ msg | safe }}</p>
+                                        <p class=" h4 mb-4 text-danger text-gradient font-weight-bold">{{ msg | safe }}</p>
                                                             
                                     {% else %}
                                     <h1 class="h4 text-gray-900 mb-4">Bienvenido!!</h1>
@@ -52,29 +52,21 @@
                                         <div class="form-group">
                                             <input type="text" class="form-control form-control-user"
                                                 id="exampleInputEmail" aria-describedby="emailHelp"
-                                                placeholder="Enter Email Address..." name="username">
+                                                placeholder="username..." name="username">
                                         </div>
                                         <div class="form-group">
                                             <input type="password" class="form-control form-control-user"
                                                 id="exampleInputPassword" placeholder="Password" name="password">
                                         </div>
-                                        <div class="form-group">
-                                            <div class="custom-control custom-checkbox small">
-                                                <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">Remember
-                                                    Me</label>
-                                            </div>
-                                        </div>
-                                        <button type="submit" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Sign in</button>
+                                       
+                                        <button type="submit" class="btn btn-lg bg-gradient-primary text-white btn-lg w-100 mt-4 mb-0">Inicia session</button>
                                         <hr>
                                         
                                     </form>
                                     <hr>
+                                    
                                     <div class="text-center">
-                                        <a class="small" href="forgot-password.html">Forgot Password?</a>
-                                    </div>
-                                    <div class="text-center">
-                                        <a class="small" href="register.html">Create an Account!</a>
+                                        <a class="small" href="{% url 'register_user' %}">Crear cuenta!</a>
                                     </div>
                                 </div>
                             </div>
