--- a/apps/app_system/templates/principal.html
+++ b/apps/app_system/templates/principal.html
@@ -5,8 +5,78 @@
   {% endblock title %}
 
 {% load static %}
+
 {% block content %}
-{{mensaje}}
+<br>
+
+<hr>
+<div class="container-fluid">
+
+  <!-- Page Heading -->
+  <h1 class="h3 mb-4 text-gray-800">Bienvenido {{request.user}}</h1>
+
+</div>
+<div class="card shadow mb-4">
+  <!-- Card Header - Dropdown -->
+  <div
+      class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+      Quienes somos?
+  </div>
+  <!-- Card Body -->
+  <div class="card-body">
+      Somos una empresa dirigida a brindar soluciones con una permanente actitud de servicio a través de personal calificado. 
+      Nuestra división soporte está dotada de una gran capacidad de respuesta para atender cualquier urgencia y mantener la operación 
+      de nuestros clientes sin contratiempos mayores, así como de asesoría y servicios de tipo preventivo para evitar en lo posible alguna 
+      eventualidad.
+      Contamos con personal capacitado, motivado y comprometido, acompañado de recursos físicos y tecnológicos para el desarrollo de las 
+      actividades que brindamos a nuestros clientes.  Nos aseguramos de utilizar y desarrollar nuevas tecnologías y servicios logrando un 
+      progreso continuo de nuestra empresa.
+  </div>
+</div>
+<div class="row">
+
+  <div class="col-lg-6">
+
+      <!-- Default Card Example -->
+      <div class="card mb-4">
+          <div class="card-header py-3">
+            <center>Mision</center>  
+          </div>
+          <div class="card-body">
+              Somos una empresa enfocada a la comercialización y a la prevención de servicios relacionados a satisfacer las necesidades y 
+              expectativas de nuestros clientes en la solución de problemas que se le presenten en una sola visita, con eficiencia,
+              eficacia y calidad para que consigan alcanzar sus propios objetivos.
+          </div>
+      </div>
+
+  </div>
+  <div class="col-lg-6">
+
+      <!-- Default Card Example -->
+      
+
+      <!-- Basic Card Example -->
+      <div class="card shadow mb-4">
+          <div class="card-header py-3">
+              <center>Vision</center>
+          </div>
+          <div class="card-body">
+              Lograremos un reconocimiento gracias a nuestra innovación en tecnología y desarrollo de nuevos productos de software y 
+              las comunicaciones, resolver inquietudes de nuestros clientes de hardware.  Nuestro servicio será mejorado progresivamente 
+              en calidad y eficiencia para cumplir con las exigencias de todos nuestros clientes.
+          </div>
+      </div>
+
+  </div>
+
+  <div class="col-lg-6">
+
+      
+
+  </div>
+
+</div>
+
 {% endblock content %}
 
 {% block js %}
