--- a/static/css/sb-admin-2.css
+++ b/static/css/sb-admin-2.css
@@ -10871,6 +10871,11 @@ a:focus {
   background-position: center;
   background-size: cover;
 }
+.bg-uth-image {
+  background: url("/static/img/uth.png");
+  background-position: center;
+  background-size: cover;
+}
 
 .bg-password-image {
   background: url("https://source.unsplash.com/oWTW-jNGl9I/600x800");
